--- a/src/App.css
+++ b/src/App.css
@@ -40,15 +40,16 @@
 .form1{
   border: solid 1px ;
   background-color: #52eaf6;
-  padding: 5%;
+  padding: 1%;
   border-radius: 5%;
   width: 17%;
+  box-shadow: rgb(0 0 0 / 40%) 9px 9px 30px, rgb(0 0 0 / 40%) -9px -9px 30px;
   
 }
 .formulario{
-  background-color: #40455c;
+  
   border-radius: 5%;
-  padding: 5%;
+  /*padding: 1%;*/
   
 }
 
@@ -65,6 +66,7 @@ form input {
   height: 26px;
   border-radius: 5%;
   margin:5% ;
+  /*display: flex;*/
   vertical-align: auto;
 }
 
@@ -94,6 +96,11 @@ h3 {
   align-items: flex-end;
 }
 
+.check{
+  height: 20px;
+  width: 20px;
+}
+
 .btn-delete {
   cursor: pointer;
   display: inline-block;
@@ -118,6 +125,12 @@ h3 {
   background-color: darkgreen;
   height: 30px;
   width: 80px;
+  border: solid 2px rgb(2, 2, 2);
+  
 }
 
+.btn-edit:hover{
 
+  background-color: rgb(4, 32, 4);
+  
+}
